--- a/infra/aws-tform-e2e/ansible-free5gc/roles/k8s-all/tasks/main.yml
+++ b/infra/aws-tform-e2e/ansible-free5gc/roles/k8s-all/tasks/main.yml
@@ -11,8 +11,8 @@
     dest: /root/gtp5g
     version: v0.3.1
 
-# - name: Make GTP5G
-#   shell: cd /root/gtp5g && make && make install
+ - name: Make GTP5G
+   shell: cd /root/gtp5g && make && make install
 
 - name: Ensure interfaces eth0
   ignore_errors: yes
