--- a/infra/aws-tform-e2e/ansible-free5gc/group_vars/all.yml
+++ b/infra/aws-tform-e2e/ansible-free5gc/group_vars/all.yml
@@ -1,1 +1,1 @@
-ansible_ssh_private_key_file: "../terraform-prov-aws/K8S-DEMO-key.pem"
+#ansible_ssh_private_key_file: "../terraform-prov-aws/K8S-DEMO-key.pem"
