--- a/infra/aws-tform-e2e/ansible-k8s/group_vars/all.yml
+++ b/infra/aws-tform-e2e/ansible-k8s/group_vars/all.yml
@@ -7,4 +7,4 @@ kubeadm_opts: ""
 
 master_ip: "{{ hostvars[groups['tag_Role_master'][0]]['ansible_default_ipv4'].address | default(groups['tag_Role_master'][0]) }}"
 
-ansible_ssh_private_key_file: "../terraform-prov-aws/K8S-DEMO-key.pem"
+#ansible_ssh_private_key_file: "../terraform-prov-aws/K8S-DEMO-key.pem"
